tests/baselines/reference/nestedBlockScopedBindings2(strict=true).errors.txt
nestedBlockScopedBindings2.ts(27,13): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(28,15): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(40,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(41,19): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(53,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(54,19): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(62,13): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(63,15): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(88,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(89,19): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(107,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(108,19): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(116,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(117,19): error TS7005: Variable 'x' implicitly has an 'any' type.
nestedBlockScopedBindings2.ts(122,17): error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
nestedBlockScopedBindings2.ts(123,19): error TS7005: Variable 'x' implicitly has an 'any' type.


==== nestedBlockScopedBindings2.ts (16 errors) ====
    function a0() {
        {
            let x = 1;
            () => x;
        }
        {
            let x = 1;
        }
    }
    
    function a1() {
        {
            let x;
        }
        {
            let x = 1;
            () => x;
        }
    }
    
    function a2() {
        {
            let x = 1;
            () => x;
        }
        {
            let x;
                ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
            () => x;
                  ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        }
    }
    
    
    function a3() {
        {
            let x = 1;
            () => x;
        }
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
    }
    
    
    function a4() {
        {
            let x;
        }
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
    }
    
    
    function a5() {
        {
            let x;
                ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
            () => x;
                  ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
        }
        switch (1) {
            case 1:
                let x;
                break;
        }
    }
    
    function a6() {
        switch (1) {
            case 1:
                let x;
                break;
        }
        switch (1) {
            case 1:
                let x;
                break;
        }
    }
    
    function a7() {
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
        switch (1) {
            case 1:
                let x;
                break;
        }
    }
    
    function a8() {
        switch (1) {
            case 1:
                let x;
                break;
        }
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
    }
    
    function a9() {
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
        switch (1) {
            case 1:
                let x;
                    ~
!!! error TS7034: Variable 'x' implicitly has type 'any' in some locations where its type cannot be determined.
                () => x;
                      ~
!!! error TS7005: Variable 'x' implicitly has an 'any' type.
                break;
        }
    }
    